--- a/Clasificacion de imagenes.ipynb
+++ b/Clasificacion de imagenes.ipynb
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -720,6 +720,35 @@
       "              tol=1e-15, validation_fraction=0.1, verbose=True,\n",
       "              warm_start=False)\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sanix\\Anaconda3\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:470: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html.\n",
+      "  self.n_iter_ = _check_optimize_result(\"lbfgs\", opt_res, self.max_iter)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "MLPClassifier(activation='tanh', alpha=0.0001, batch_size='auto', beta_1=0.9,\n",
+       "              beta_2=0.999, early_stopping=False, epsilon=1e-08,\n",
+       "              hidden_layer_sizes=(100, 70), learning_rate='constant',\n",
+       "              learning_rate_init=0.001, max_fun=15000, max_iter=10000,\n",
+       "              momentum=0.9, n_iter_no_change=10, nesterovs_momentum=True,\n",
+       "              power_t=0.5, random_state=None, shuffle=True, solver='lbfgs',\n",
+       "              tol=1e-15, validation_fraction=0.1, verbose=True,\n",
+       "              warm_start=False)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -746,9 +775,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matriz de Confusion\n",
+      "\n",
+      "[[2 0 0 ... 0 0 0]\n",
+      " [0 4 0 ... 0 0 0]\n",
+      " [0 0 1 ... 1 1 0]\n",
+      " ...\n",
+      " [0 0 1 ... 2 0 0]\n",
+      " [0 0 2 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 3]]\n",
+      "\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      0.67      0.80         3\n",
+      "           1       1.00      1.00      1.00         4\n",
+      "           2       0.20      0.33      0.25         3\n",
+      "           3       0.33      0.67      0.44         3\n",
+      "           4       1.00      1.00      1.00         3\n",
+      "           5       0.75      1.00      0.86         3\n",
+      "           6       1.00      0.50      0.67         4\n",
+      "           7       0.50      0.33      0.40         3\n",
+      "           8       1.00      0.67      0.80         3\n",
+      "           9       0.67      0.50      0.57         4\n",
+      "          10       0.00      0.00      0.00         3\n",
+      "          11       1.00      0.33      0.50         3\n",
+      "          12       0.50      0.25      0.33         4\n",
+      "          13       0.60      1.00      0.75         3\n",
+      "          14       0.33      0.33      0.33         3\n",
+      "          15       0.20      0.33      0.25         3\n",
+      "          16       1.00      1.00      1.00         3\n",
+      "          17       1.00      1.00      1.00         3\n",
+      "          18       1.00      0.33      0.50         3\n",
+      "          19       0.50      0.67      0.57         3\n",
+      "          20       0.33      0.33      0.33         3\n",
+      "          21       1.00      0.50      0.67         4\n",
+      "          22       0.33      0.67      0.44         3\n",
+      "          23       0.50      0.50      0.50         4\n",
+      "          24       0.00      0.00      0.00         4\n",
+      "          25       0.00      0.00      0.00         3\n",
+      "          26       1.00      0.33      0.50         3\n",
+      "          27       0.50      1.00      0.67         3\n",
+      "          28       1.00      1.00      1.00         3\n",
+      "          29       1.00      0.67      0.80         3\n",
+      "          30       1.00      0.33      0.50         3\n",
+      "          31       0.20      0.33      0.25         3\n",
+      "          32       0.50      0.67      0.57         3\n",
+      "          33       0.40      0.67      0.50         3\n",
+      "          34       0.50      1.00      0.67         3\n",
+      "          35       0.50      0.67      0.57         3\n",
+      "          36       1.00      0.75      0.86         4\n",
+      "          37       1.00      0.33      0.50         3\n",
+      "          38       0.14      0.25      0.18         4\n",
+      "          39       0.00      0.00      0.00         3\n",
+      "          40       0.00      0.00      0.00         3\n",
+      "          41       0.25      0.33      0.29         3\n",
+      "          42       0.50      0.33      0.40         3\n",
+      "          43       0.00      0.00      0.00         3\n",
+      "          44       0.80      1.00      0.89         4\n",
+      "          45       0.50      0.33      0.40         3\n",
+      "          46       0.33      0.33      0.33         3\n",
+      "          47       0.25      0.25      0.25         4\n",
+      "          48       0.75      1.00      0.86         3\n",
+      "          49       0.60      1.00      0.75         3\n",
+      "          50       0.75      1.00      0.86         3\n",
+      "          51       1.00      0.67      0.80         3\n",
+      "          52       0.75      1.00      0.86         3\n",
+      "          53       0.75      1.00      0.86         3\n",
+      "          54       0.50      0.67      0.57         3\n",
+      "          55       1.00      1.00      1.00         3\n",
+      "          56       0.67      0.67      0.67         3\n",
+      "          57       0.00      0.00      0.00         3\n",
+      "          58       1.00      0.50      0.67         4\n",
+      "          59       0.00      0.00      0.00         3\n",
+      "          60       1.00      0.67      0.80         3\n",
+      "          61       1.00      1.00      1.00         4\n",
+      "          62       1.00      1.00      1.00         3\n",
+      "          63       1.00      1.00      1.00         3\n",
+      "          64       0.80      1.00      0.89         4\n",
+      "          65       0.40      0.67      0.50         3\n",
+      "          66       0.25      0.33      0.29         3\n",
+      "          67       0.50      0.67      0.57         3\n",
+      "          68       0.00      0.00      0.00         3\n",
+      "          69       0.60      1.00      0.75         3\n",
+      "\n",
+      "    accuracy                           0.58       224\n",
+      "   macro avg       0.59      0.58      0.55       224\n",
+      "weighted avg       0.60      0.58      0.56       224\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sanix\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1268: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import classification_report, confusion_matrix\n",
     "\n",
