--- a/Clasificacion de imagenes.ipynb
+++ b/Clasificacion de imagenes.ipynb
@@ -167,7 +167,7 @@
     "import numpy as np\n",
     "\n",
     "%matplotlib inline\n",
-    "datos = pd.read_csv('corpus/datos.csv', sep=\";\")\n",
+    "datos = pd.read_csv('corpus/train/datos.csv', sep=\";\")\n",
     "datos.head()"
    ]
   },
@@ -634,18 +634,18 @@
     {
      "data": {
       "text/plain": [
-       "array([[-0.77011187, -0.37188139, -0.26469383, -0.23496323, -0.11352916,\n",
-       "        -0.19431574, -0.00430886],\n",
-       "       [ 3.671591  ,  3.7595119 ,  1.32166184,  0.12063621, -0.0890712 ,\n",
-       "         0.16902901, -0.42689269],\n",
-       "       [-0.67212809, -0.36312184, -0.25866301, -0.23438666, -0.11352907,\n",
-       "        -0.19434883, -0.00431089],\n",
-       "       [-0.39786821, -0.24949913, -0.26070641, -0.23268111, -0.11352843,\n",
-       "        -0.19409487, -0.00431634],\n",
-       "       [ 0.21865912, -0.36944091, -0.25543829, -0.23014452, -0.1135313 ,\n",
-       "        -0.19421029, -0.00423988],\n",
-       "       [ 0.42812264,  0.10609515, -0.15276291, -0.07138302, -0.11099275,\n",
-       "        -0.12594532, -0.00854249]])"
+       "array([[-0.44664155, -0.26865348, -0.25676445, -0.22435263, -0.1129645 ,\n",
+       "        -0.19289196, -0.00302592],\n",
+       "       [-0.40535313, -0.28136177, -0.21467554, -0.19067064, -0.1127135 ,\n",
+       "        -0.18696805, -0.00214716],\n",
+       "       [ 1.96785275,  1.16397712,  1.1984633 ,  0.02172859, -0.09508182,\n",
+       "         0.00422493, -0.0852806 ],\n",
+       "       [-0.65852792, -0.36350691, -0.25185118, -0.23725092, -0.11298486,\n",
+       "        -0.19534915, -0.00301966],\n",
+       "       [-0.37187312, -0.2569948 , -0.23691768, -0.22676185, -0.11297765,\n",
+       "        -0.19503289, -0.00353049],\n",
+       "       [-0.33948197, -0.22536695, -0.26987756, -0.23735627, -0.11298491,\n",
+       "        -0.19540016, -0.00302092]])"
       ]
      },
      "execution_count": 5,
@@ -679,7 +679,7 @@
     "X.head()\n",
     "d.head()\n",
     "\n",
-    "X_train, X_test, d_train, d_test = train_test_split(X,d,train_size=0.80,random_state=0,stratify=d)\n",
+    "X_train, X_test, d_train, d_test = train_test_split(X,d,train_size=0.9,random_state=0,stratify=d)\n",
     "\n",
     "# We perform OneHotEncoding to have 70 outputs instead of 1 and then perform a dataframe with pandas\n",
     "dat_dict=datos.T.to_dict().values()\n",
@@ -779,105 +779,236 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>f1</th>\n",
+       "      <th>f2</th>\n",
+       "      <th>f3</th>\n",
+       "      <th>f4</th>\n",
+       "      <th>f5</th>\n",
+       "      <th>f6</th>\n",
+       "      <th>f7</th>\n",
+       "      <th>Fichero</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0.332969</td>\n",
+       "      <td>0.034574</td>\n",
+       "      <td>0.028890</td>\n",
+       "      <td>0.007414</td>\n",
+       "      <td>1.078750e-04</td>\n",
+       "      <td>0.001368</td>\n",
+       "      <td>-1.174150e-05</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0.360080</td>\n",
+       "      <td>0.101244</td>\n",
+       "      <td>0.000776</td>\n",
+       "      <td>0.000091</td>\n",
+       "      <td>-5.377990e-09</td>\n",
+       "      <td>-0.000015</td>\n",
+       "      <td>-2.356560e-08</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>0.654361</td>\n",
+       "      <td>0.151326</td>\n",
+       "      <td>0.021003</td>\n",
+       "      <td>0.004154</td>\n",
+       "      <td>3.011900e-05</td>\n",
+       "      <td>0.001414</td>\n",
+       "      <td>2.445140e-05</td>\n",
+       "      <td>56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0.295122</td>\n",
+       "      <td>0.056867</td>\n",
+       "      <td>0.000064</td>\n",
+       "      <td>0.000014</td>\n",
+       "      <td>4.193360e-10</td>\n",
+       "      <td>0.000003</td>\n",
+       "      <td>-2.725070e-11</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>0.218830</td>\n",
+       "      <td>0.017264</td>\n",
+       "      <td>0.000465</td>\n",
+       "      <td>0.000212</td>\n",
+       "      <td>6.241560e-08</td>\n",
+       "      <td>0.000018</td>\n",
+       "      <td>-2.300350e-08</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         f1        f2        f3        f4            f5        f6  \\\n",
+       "0  0.332969  0.034574  0.028890  0.007414  1.078750e-04  0.001368   \n",
+       "1  0.360080  0.101244  0.000776  0.000091 -5.377990e-09 -0.000015   \n",
+       "2  0.654361  0.151326  0.021003  0.004154  3.011900e-05  0.001414   \n",
+       "3  0.295122  0.056867  0.000064  0.000014  4.193360e-10  0.000003   \n",
+       "4  0.218830  0.017264  0.000465  0.000212  6.241560e-08  0.000018   \n",
+       "\n",
+       "             f7  Fichero  \n",
+       "0 -1.174150e-05       52  \n",
+       "1 -2.356560e-08       45  \n",
+       "2  2.445140e-05       56  \n",
+       "3 -2.725070e-11       35  \n",
+       "4 -2.300350e-08       41  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos_test = pd.read_csv('corpus/test/datos_test.csv', sep=\";\")\n",
+    "datos_test['Fichero'] = datos_test['Fichero'].str.split('/').str[1]\n",
+    "datos_test['Fichero'] = datos_test['Fichero'].str.split('-').str[0]\n",
+    "\n",
+    "datos_test['Fichero']=datos_test['Fichero'].map({'apple':0, 'device8':1, 'device9':2, 'Misk':3, 'device1':4, 'carriage':5, \n",
+    "                                       'device3':6, 'fly':7, 'cup':8, 'car':9, 'camel':10, 'Bone':11, 'turtle':12, \n",
+    "                                       'bat':13, 'cellular_phone':14, 'pocket':15, 'device4':16, 'teddy':17, 'frog':18, \n",
+    "                                       'lizzard':19, 'cattle':20, 'spoon':21, 'guitar':22, 'fountain':23, 'octopus':24, \n",
+    "                                       'bird':25, 'ray':26, 'spring':27, 'chopper':28, 'horse':29, 'dog':30, 'hat':31, \n",
+    "                                       'personal_car':32, 'butterfly':33, 'device5':34, 'brick':35, 'device0':36, 'key':37, \n",
+    "                                       'crown':38, 'fish':39, 'shoe':40, 'Comma':41, 'fork':42, 'HCircle':43, 'device7':44, \n",
+    "                                       'lmfish':45, 'watch':46, 'beetle':47, 'bell':48, 'rat':49, 'elephant':50, 'deer':51, \n",
+    "                                       'hammer':52, 'jar':53, 'Heart':54, 'flatfish':55, 'sea_snake':56, 'horseshoe':57, \n",
+    "                                       'Glas':58, 'tree':59, 'stef':60, 'truck':61, 'children':62, 'face':63, 'bottle':64, \n",
+    "                                       'pencil':65, 'chicken':66, 'device2':67, 'device6':68, 'classic':69})\n",
+    "X_test=datos_test.drop('Fichero',axis=1)\n",
+    "d_test=datos_test['Fichero']\n",
+    "X_test=scaler.transform(X_test)\n",
+    "datos_test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Matriz de Confusion\n",
       "\n",
-      "[[2 0 0 ... 0 0 0]\n",
+      "[[4 0 0 ... 0 0 0]\n",
       " [0 4 0 ... 0 0 0]\n",
       " [0 0 1 ... 1 1 0]\n",
       " ...\n",
-      " [0 0 1 ... 2 0 0]\n",
-      " [0 0 2 ... 0 0 0]\n",
+      " [0 0 0 ... 2 0 0]\n",
+      " [0 0 0 ... 0 4 0]\n",
       " [0 0 0 ... 0 0 3]]\n",
       "\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      0.67      0.80         3\n",
+      "           0       1.00      1.00      1.00         4\n",
       "           1       1.00      1.00      1.00         4\n",
-      "           2       0.20      0.33      0.25         3\n",
-      "           3       0.33      0.67      0.44         3\n",
-      "           4       1.00      1.00      1.00         3\n",
-      "           5       0.75      1.00      0.86         3\n",
-      "           6       1.00      0.50      0.67         4\n",
-      "           7       0.50      0.33      0.40         3\n",
-      "           8       1.00      0.67      0.80         3\n",
-      "           9       0.67      0.50      0.57         4\n",
-      "          10       0.00      0.00      0.00         3\n",
-      "          11       1.00      0.33      0.50         3\n",
-      "          12       0.50      0.25      0.33         4\n",
-      "          13       0.60      1.00      0.75         3\n",
-      "          14       0.33      0.33      0.33         3\n",
-      "          15       0.20      0.33      0.25         3\n",
-      "          16       1.00      1.00      1.00         3\n",
-      "          17       1.00      1.00      1.00         3\n",
-      "          18       1.00      0.33      0.50         3\n",
-      "          19       0.50      0.67      0.57         3\n",
-      "          20       0.33      0.33      0.33         3\n",
-      "          21       1.00      0.50      0.67         4\n",
-      "          22       0.33      0.67      0.44         3\n",
-      "          23       0.50      0.50      0.50         4\n",
+      "           2       1.00      0.25      0.40         4\n",
+      "           3       0.33      0.25      0.29         4\n",
+      "           4       0.67      0.50      0.57         4\n",
+      "           5       0.75      0.75      0.75         4\n",
+      "           6       0.80      1.00      0.89         4\n",
+      "           7       0.33      0.25      0.29         4\n",
+      "           8       1.00      0.75      0.86         4\n",
+      "           9       1.00      0.50      0.67         4\n",
+      "          10       0.20      0.25      0.22         4\n",
+      "          11       0.50      0.75      0.60         4\n",
+      "          12       0.40      0.50      0.44         4\n",
+      "          13       1.00      0.50      0.67         4\n",
+      "          14       0.57      1.00      0.73         4\n",
+      "          15       0.50      0.75      0.60         4\n",
+      "          16       1.00      1.00      1.00         4\n",
+      "          17       1.00      1.00      1.00         4\n",
+      "          18       0.57      1.00      0.73         4\n",
+      "          19       0.67      1.00      0.80         4\n",
+      "          20       0.43      0.75      0.55         4\n",
+      "          21       1.00      1.00      1.00         4\n",
+      "          22       1.00      0.50      0.67         4\n",
+      "          23       0.50      1.00      0.67         4\n",
       "          24       0.00      0.00      0.00         4\n",
-      "          25       0.00      0.00      0.00         3\n",
-      "          26       1.00      0.33      0.50         3\n",
-      "          27       0.50      1.00      0.67         3\n",
-      "          28       1.00      1.00      1.00         3\n",
-      "          29       1.00      0.67      0.80         3\n",
-      "          30       1.00      0.33      0.50         3\n",
-      "          31       0.20      0.33      0.25         3\n",
-      "          32       0.50      0.67      0.57         3\n",
-      "          33       0.40      0.67      0.50         3\n",
-      "          34       0.50      1.00      0.67         3\n",
-      "          35       0.50      0.67      0.57         3\n",
-      "          36       1.00      0.75      0.86         4\n",
-      "          37       1.00      0.33      0.50         3\n",
-      "          38       0.14      0.25      0.18         4\n",
-      "          39       0.00      0.00      0.00         3\n",
-      "          40       0.00      0.00      0.00         3\n",
-      "          41       0.25      0.33      0.29         3\n",
-      "          42       0.50      0.33      0.40         3\n",
-      "          43       0.00      0.00      0.00         3\n",
-      "          44       0.80      1.00      0.89         4\n",
-      "          45       0.50      0.33      0.40         3\n",
-      "          46       0.33      0.33      0.33         3\n",
-      "          47       0.25      0.25      0.25         4\n",
-      "          48       0.75      1.00      0.86         3\n",
-      "          49       0.60      1.00      0.75         3\n",
-      "          50       0.75      1.00      0.86         3\n",
-      "          51       1.00      0.67      0.80         3\n",
-      "          52       0.75      1.00      0.86         3\n",
-      "          53       0.75      1.00      0.86         3\n",
-      "          54       0.50      0.67      0.57         3\n",
-      "          55       1.00      1.00      1.00         3\n",
-      "          56       0.67      0.67      0.67         3\n",
-      "          57       0.00      0.00      0.00         3\n",
-      "          58       1.00      0.50      0.67         4\n",
-      "          59       0.00      0.00      0.00         3\n",
-      "          60       1.00      0.67      0.80         3\n",
+      "          25       0.80      1.00      0.89         4\n",
+      "          26       1.00      1.00      1.00         4\n",
+      "          27       0.33      0.25      0.29         4\n",
+      "          28       1.00      0.50      0.67         4\n",
+      "          29       0.40      0.50      0.44         4\n",
+      "          30       0.33      0.50      0.40         4\n",
+      "          31       1.00      0.25      0.40         4\n",
+      "          32       1.00      0.25      0.40         4\n",
+      "          33       0.75      0.75      0.75         4\n",
+      "          34       1.00      1.00      1.00         4\n",
+      "          35       1.00      0.50      0.67         4\n",
+      "          36       1.00      1.00      1.00         4\n",
+      "          37       0.67      1.00      0.80         4\n",
+      "          38       0.50      0.25      0.33         4\n",
+      "          39       1.00      0.50      0.67         4\n",
+      "          40       0.60      0.75      0.67         4\n",
+      "          41       0.33      0.50      0.40         4\n",
+      "          42       0.50      0.25      0.33         4\n",
+      "          43       0.80      1.00      0.89         4\n",
+      "          44       1.00      1.00      1.00         4\n",
+      "          45       0.57      1.00      0.73         4\n",
+      "          46       1.00      0.25      0.40         4\n",
+      "          47       0.50      0.50      0.50         4\n",
+      "          48       0.80      1.00      0.89         4\n",
+      "          49       1.00      0.75      0.86         4\n",
+      "          50       1.00      0.75      0.86         4\n",
+      "          51       1.00      0.75      0.86         4\n",
+      "          52       1.00      0.50      0.67         4\n",
+      "          53       1.00      1.00      1.00         4\n",
+      "          54       1.00      0.50      0.67         4\n",
+      "          55       1.00      0.75      0.86         4\n",
+      "          56       0.80      1.00      0.89         4\n",
+      "          57       0.60      0.75      0.67         4\n",
+      "          58       0.80      1.00      0.89         4\n",
+      "          59       0.25      0.25      0.25         4\n",
+      "          60       0.60      0.75      0.67         4\n",
       "          61       1.00      1.00      1.00         4\n",
-      "          62       1.00      1.00      1.00         3\n",
-      "          63       1.00      1.00      1.00         3\n",
-      "          64       0.80      1.00      0.89         4\n",
-      "          65       0.40      0.67      0.50         3\n",
-      "          66       0.25      0.33      0.29         3\n",
-      "          67       0.50      0.67      0.57         3\n",
-      "          68       0.00      0.00      0.00         3\n",
-      "          69       0.60      1.00      0.75         3\n",
+      "          62       1.00      0.75      0.86         4\n",
+      "          63       1.00      1.00      1.00         4\n",
+      "          64       0.67      0.50      0.57         4\n",
+      "          65       0.67      1.00      0.80         4\n",
+      "          66       0.50      0.75      0.60         4\n",
+      "          67       0.50      0.50      0.50         4\n",
+      "          68       0.80      1.00      0.89         4\n",
+      "          69       0.75      0.75      0.75         4\n",
       "\n",
-      "    accuracy                           0.58       224\n",
-      "   macro avg       0.59      0.58      0.55       224\n",
-      "weighted avg       0.60      0.58      0.56       224\n",
+      "    accuracy                           0.70       280\n",
+      "   macro avg       0.74      0.70      0.69       280\n",
+      "weighted avg       0.74      0.70      0.69       280\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\sanix\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1268: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     }
    ],
